Fixed menu overlapping issues and added status indicators with tooltip to tools

--- a/app/static/styles/auth_base.css
+++ b/app/static/styles/auth_base.css
@@ -1,6 +1,9 @@
 /*
  * Base structure
  */
+body, html {
+    height: 100%;
+}
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
@@ -33,12 +36,13 @@ body {
 }
 
 .sidebar {
-    position: fixed;
+    position: absolute;
     top: 51px;
     bottom: 0;
     left: 0;
     display: block;
     background-color: #eeeeee;
+    z-index: 999;
 }
 
 
@@ -207,4 +211,53 @@ figcaption {
     top: 5px;
     font-size: 90%;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+.toolStatusIndicator{
+    width: auto;
+    float: right;
+    clear: both;
+    margin-bottom: -30px;
+}
+
+
+p.tooltips {
+    position: relative;
+    display: inline;
+    font-size: 95%;
+    border-radius: 20px;
+    top: 4px;
+    cursor: help;
+}
+
+p.tooltips span {
+    position: absolute;
+    width:120px;
+    color: #FFFFFF;
+    background: darkslategray;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    visibility: hidden;
+    border-radius: 6px;
+    opacity: 0.7;
+    bottom: 35px;
+    left: -50px;
+}
+
+p.tooltips span:after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -8px;
+    width: 0; height: 0;
+    border-top: 8px solid darkslategray;
+    border-right: 8px solid transparent;
+    border-left: 8px solid transparent;
+}
+
+p:hover.tooltips span {
+    visibility: visible;
 }
